fix(server): add send code controller
